Fixing blog page share buttons z-index

--- a/client/views/default/main/blog/blog.less
+++ b/client/views/default/main/blog/blog.less
@@ -148,6 +148,7 @@ article.default-layout article.main-blog {
                     padding: 0;
                     margin: 0;
                     font-size: 0;
+                    z-index: 1;
 
                     > li {
                         position: absolute;
